# SignalGate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.test.yml  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_sanitize.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  clusterfuzzlite.yml  codeql.yml  fuzzing.yml  release.yaml  scorecard.yml
docker/: Dockerfile.mock-openai  Dockerfile.signalgate  Dockerfile.test-runner  config.test.json  manifest.test.json  mock_openai.py  requirements.txt  test_runner.py
docs/: CONTAINER.md  DATASET.md  LOAD_TESTING.md  METRICS.md  NAMING.md  OPENCLAW_INTEGRATION.md  RELEASE.md  RELEASE_DRAFT.md  ROADMAP.md  RUNBOOK.md  SPEC.md  STATUS.md  TESTING.md  UPSTREAMS.md  config.example.json  config.schema.json  knn_dataset.schema.json  manifest.example.json  manifest.schema.json  runtime-drift.md
fuzz/: fuzz_sanitize_for_client.py
scripts/: check_release_version.py  docker_test.sh  eval_knn.py  load_test.py
signalgate/: app.py  budgets.py  canary.py  circuit_breaker.py  classifier.py  cli.py  costing.py  embeddings.py  errors.py  health.py  limits.py  metrics.py  persistence.py  routing.py  runtime.py  sanitize.py  schemas.py  security.py  settings.py  telemetry.py  util.py
signalgate/upstreams/: gemini.py  manager.py  openai.py
tests/e2e/: test_live_openai.py  test_signalgate_smoke.py
tests/integration/: conftest.py  test_api_no_candidates.py  test_cost_and_metrics.py  test_failover.py  test_robustness.py  test_sanitize.py  test_security.py  test_streaming.py
tests/regression/: test_golden_routing.py
tests/unit/: test_chat_only_payload.py  test_circuit_breaker.py  test_classifier_knn.py  test_cli_uds.py  test_eval_knn.py  test_gemini_usage_mapping.py  test_manifest_capability_truth.py  test_persistence.py  test_runtime_classifier.py  test_runtime_schema_extensions.py  test_security_hardening.py  test_startup_validation.py  test_stickiness.py  test_telemetry.py
