[project]
name = "signalgate"
version = "1.0.3"
description = "SignalGate - internal semantic tier router proxy for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
authors = [{ name = "ZeroSignal" }]

dependencies = [
  "fastapi>=0.135.3",
  "uvicorn>=0.44.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "orjson>=3.11.8",
  "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.10",
  "asgi-lifespan>=2.1",
]
embed = [
  "llama-cpp-python>=0.3.20",
  "anyio>=4.13.0",
]

[project.scripts]
signalgate = "signalgate.cli:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not e2e' -ra"
markers = [
  "unit: fast unit tests",
  "integration: ASGI/in-process integration tests",
  "regression: golden tests for routing stability",
  "e2e: live upstream tests (requires API keys)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
