[project]
name = "signalgate"
version = "1.0.3"
description = "SignalGate - internal semantic tier router proxy for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
authors = [{ name = "ZeroSignal" }]

dependencies = [
  "fastapi>=0.136.3",
  "uvicorn>=0.49.0",
  "httpx>=0.27",
  "pydantic>=2.13.4",
  "jsonschema>=4.22",
  "orjson>=3.11.9",
  "numpy>=2.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.16",
  "asgi-lifespan>=2.1",
]
embed = [
  "llama-cpp-python>=0.3.28",
  "anyio>=4.0",
]

[project.scripts]
signalgate = "signalgate.cli:main"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not e2e' -ra"
markers = [
  "unit: fast unit tests",
  "integration: ASGI/in-process integration tests",
  "regression: golden tests for routing stability",
  "e2e: live upstream tests (requires API keys)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
